<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_blue"
    tools:context=".DetallesPersonaje">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/luigi" />

            <TextView
                android:id="@+id/tituloNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombre"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />



            <TextView
                android:id="@+id/tituloDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/descripcion"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                tools:text="@string/descripcion" />
            <TextView
                android:id="@+id/tituloHabilidades"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/habilidades"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/habilidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                tools:text="@string/habilidades" />

            <TextView
                android:id="@+id/tituloCaracteristicas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/caracteristicas"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/caracteristicas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                tools:text="@string/caracteristicas" />

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:text="@string/botonVolver" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
